--- a/client/src/pages/Request/request.module.css
+++ b/client/src/pages/Request/request.module.css
@@ -13,8 +13,21 @@
 	max-width: 500px;
 	max-height: 380px;
 }
+.active {
+	border-bottom: 5px solid #C08767;
+}
+.cklickers {
+	display: flex;
+	justify-content: space-around;
+}
 
-
+.h4{
+	width: 50%;
+	display: block;
+	font-size: 25px;
+	font-weight: 600;
+	cursor: pointer;
+}
 /* {
 background: #F5EBDB;
 border: 1px solid #FFFFFF;
