--- a/client/src/pages/Form/components/RadioBtn/radioBtn.module.css
+++ b/client/src/pages/Form/components/RadioBtn/radioBtn.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
 	background: #F5EBDB;
 	border: 1px solid #FFFFFF;
 	border-radius: 10px;
@@ -19,7 +19,6 @@ p {
 	line-height: 28p
 }
 label {
-	/* width: 100%; */
 	border: none;
 	font-weight: 400;
 	font-size: 24px;
@@ -30,4 +29,29 @@ label {
 }
 input {
 	display: inline-block;
-}
+} */
+
+
+select {
+	width: 100%;
+	height: 48px;
+	padding: 0 16px;
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 28px;
+	background-color: #F5EBDB;
+	border: none;
+	border-bottom: 1px solid #C08767;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath fill='%23C08767' d='M18.3 7.7c-.4-.4-1-.4-1.4 0L12 12.6l-4.9-4.9c-.4-.4-1-.4-1.4 0-.4.4-.4 1 0 1.4l5.7 5.7c.4.4 1 .4 1.4 0l5.7-5.7c.4-.4.4-1 0-1.4z'/%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: right 16px center;
+	background-size: 20px auto;
+  }
+  
+  select:focus {
+	border-bottom: 4px solid #C08767;
+  }
