--- a/client/src/pages/Fond/fond.module.css
+++ b/client/src/pages/Fond/fond.module.css
@@ -6,36 +6,26 @@
 	color: black;
 }
 .img, .postimg {
-	max-width: 500px;
-	max-height: 380px;
+	width: 100%;
+	/* max-height: 380px; */
 }
 .fonds {
 	display: flex;
 	justify-content: space-between;
 }
-.info {
-	background: #F5EBDB;
-	border: 1px solid #FFFFFF;
-	border-radius: 10px;
-	padding: 25px 50px;
-	transition: all 0.5s;
-}
-/* .types, .description, .fonds {
-	display: flex;
-	justify-content: space-between;
-}
-.description img{
-	max-width: 350px;
-	max-height: 260px;
-	margin-top: 30px; 
-}*/
-.info1, .info2, .info3, .info4
+
+
+.info
 {
+	transition: all 0.5s;
 background: #F5EBDB;
 border: 1px solid #FFFFFF;
 border-radius: 10px;
-padding: 25px 50px;
 margin: 20px 0;
+}
+.content {
+	padding: 25px 50px;
+
 }
 .menu h1 {
 	font-weight: 700;
@@ -58,30 +48,11 @@ margin: 20px 0;
 .net {
 	display: grid;
 	width: 100%;
-	/* height: 250px; */
-	grid-template-areas:
-	  "info1 info3"
-	  "info2 info3"
-	  "postimg info4";
-
 	grid-template-columns: 45% 45%;
 	grid-gap: 10%;
 }
-.info1 {
-	grid-area: info1;
-}
-
-.info2 {
-	grid-area: info2;
-}
-
-.info3 {
-	grid-area: info3;
-}
-
-.info4 {
-	grid-area: info4;
-}
-.postimg {
-	grid-area: postimg;	
+p {
+	font-weight: 400;
+font-size: 24px;
+line-height: 28px;
 }
