--- a/client/src/pages/Form/FormRequest/formRequest.module.css
+++ b/client/src/pages/Form/FormRequest/formRequest.module.css
@@ -26,3 +26,22 @@
 	line-height: 28px;
 
 }
+.submit {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 28px;
+
+	border-radius: 70px;
+	background-color: #FCF7EF;
+	padding: 8px 40px;
+	cursor: pointer;
+	border: 1px solid #C08767;
+	color: #C08767;
+	transition: all 0.5s;
+}
+.submit:hover {
+	background: #C08767;
+	color: #FCF7EF;
+}
