--- a/client/src/pages/Form/components/Input/input.module.css
+++ b/client/src/pages/Form/components/Input/input.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.container {
 	background: #F5EBDB;
 	border: 1px solid #FFFFFF;
 	border-radius: 10px;
@@ -8,7 +8,7 @@
 	font-style: normal;
 	color: black;
 }
-h2 {
+.label {
 	font-weight: 700;
 	font-size: 28px;
 	line-height: 33px;
@@ -18,7 +18,7 @@ p {
 	font-size: 24px;
 	line-height: 28p
 }
-input {
+.input {
 	width: 100%;
 	border: none;
 	font-weight: 400;
@@ -27,8 +27,9 @@ input {
 	background-color: #F5EBDB;
 	outline: none;
 	border-bottom: 1px solid #C08767;
+	margin-top: 30px;
 }
 
-input:focus {
+.input:focus {
 	border-bottom: 4px solid #C08767;
   }
