--- a/client/src/pages/Form/components/RadioBtn/radioBtn.module.css
+++ b/client/src/pages/Form/components/RadioBtn/radioBtn.module.css
@@ -30,11 +30,26 @@ label {
 input {
 	display: inline-block;
 } */
+.label {
+	font-weight: 700;
+	font-size: 28px;
+	line-height: 33px;
+}
 
-
-select {
+.container {
+	background: #F5EBDB;
+	border: 1px solid #FFFFFF;
+	border-radius: 10px;
+	padding: 25px 50px;
+	margin: 20px 0;
+	font-family: 'Roboto';
+	font-style: normal;
+	color: black;
+}
+.select {
 	width: 100%;
 	height: 48px;
+	margin-top: 30px;
 	padding: 0 16px;
 	font-weight: 400;
 	font-size: 24px;
@@ -52,6 +67,6 @@ select {
 	background-size: 20px auto;
   }
   
-  select:focus {
+  .select:focus {
 	border-bottom: 4px solid #C08767;
   }
