--- a/client/src/common/components/FilterInput/filterInput.module.css
+++ b/client/src/common/components/FilterInput/filterInput.module.css
@@ -1,7 +1,22 @@
 .input {
-	border-radius: 70px;
+	/* border-radius: 70px;
 	width: 50%;
 	line-height: 31px;
 	color: #C08767;
-	padding: 5px 30px;
+	padding: 5px 30px; */
+	border-radius: 70px;
+	width: 45%;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 28px;
+
+	border-radius: 70px;
+	background-color: #FCF7EF;
+	padding: 8px 40px;
+	cursor: pointer;
+	border: 1px solid #C08767;
+	color: #C08767;
+	transition: all 0.5s;
 }
