added files wich in prod

--- a/client/src/common/components/CardMenu/cardMenu.module.css
+++ b/client/src/common/components/CardMenu/cardMenu.module.css
@@ -1,7 +1,7 @@
 .card {
 	max-width: 286px;
 	/* width: 286px; */
-	min-width: 270px;
+	min-width: 250px;
 	width: 100%;
 	height: 231px;
 	padding: 26px;
@@ -21,8 +21,9 @@
 	border: 4px solid #C08767;	
 }
 .img {
-	max-width: 256px;
-	max-width: 100%;	
+	max-width: 186px;
+	margin-top: 20px;
+	width: 100%;	
 	display: block;
 	margin: 0 auto;
 }
