--- a/client/src/pages/AdminPanel/components/Panel/panel.module.css
+++ b/client/src/pages/AdminPanel/components/Panel/panel.module.css
@@ -1,4 +1,9 @@
 .wrapper {
 	display: flex;
 	justify-content: space-between;
+	width: 1250px;
+	margin: 0 auto;
+}
+.wrapper>div {
+	margin: 5px;
 }
