--- a/client/src/pages/Project/project.module.css
+++ b/client/src/pages/Project/project.module.css
@@ -5,9 +5,15 @@
 	font-style: normal;
 	color: black;
 }
-.img, .postimg {
+.img {
 	max-width: 500px;
 	max-height: 380px;
+}
+.postimg {
+	max-width: 420px;
+	max-height: 300px;
+	margin-top: 45px;
+	margin-bottom: 30px;
 }
 .fonds {
 	display: flex;
