--- a/client/src/common/HOCS/CardWrapper/cardWrapper.module.css
+++ b/client/src/common/HOCS/CardWrapper/cardWrapper.module.css
@@ -2,8 +2,9 @@
 	background: #F5EBDB;
 	border: 1px solid #FFFFFF;
 	border-radius: 10px;
-	padding: 25px 50px;
+	padding: 30px 60px;
 	transition: all 0.5s;
+	margin-top: 50px;
 }
 .wrapper:hover {
 	border: 3px solid #FFFFFF;
