--- a/client/src/common/components/RequestCard/requestCard.module.css
+++ b/client/src/common/components/RequestCard/requestCard.module.css
@@ -5,16 +5,29 @@
 	padding: 25px;
 	transition: all 0.5s;
 	max-width: 300px;
+	min-height: 500px;
+	position: relative;
+	font-size: 14px;
+}
+.card h1 {
+	font-size: 21px;
+}
+.card p{
+	font-size: 16px;
 }
 .card:hover {
 	border: 3px solid #FFFFFF;
 }
-p {
-	font-size: 15px;
-}
+
 .category {
 	padding: 2px 5px;
 	border: 1px solid #C08767;
 	/* border-radius: 50%; */
 	text-align: center;
+	position: absolute;
+	bottom: -10px;
+	left: 35%;
+}
+.strong {
+	font-weight: 600;
 }
